--- a/css/css_main.css
+++ b/css/css_main.css
@@ -1,23 +1,56 @@
-.main {
-
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	-ms-flex-align: center;
-	align-items: center;
-	-webkit-box-pack: center;
-	-webkit-justify-content: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	height: 100%;
-	font-family: 'Roboto', sans-serif;
-}
-
 body,
 html {
 	margin: 0;
 	height: 100%;
-	overflow: hidden;
+  width: 100%;
 	scroll-behavior: smooth;
+  font-family: 'Roboto', sans-serif;
+}
+
+.main {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.window {
+  margin-top: 20px;
+  margin-right: auto;
+  margin-bottom: 0px;
+  margin-left: auto;
+  position: relative;
+  z-index: 100;
+  color: #fff;
+  display: flex;
+  flex-flow: column;
+  box-shadow: 0px 15px 50px 10px rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
+  height: 690px;
+  width: 800px;
+  background: #fff;
+  background: url('https://pexels.imgix.net/photos/27718/pexels-photo-27718.jpg?fit=crop&w=1280&h=823') top left no-repeat;
+}
+
+.profile {
+  height: 100%;
+  width: 25%;
+  background-color: rgba(0, 184, 212, .15);
+  border-right: 1px solid #fff;
+  text-align: center;
+  display: block;
+  z-index: 5;
+}
+
+.content {
+  position: absolute;
+  height: 100%;
+  width: 75%;
+  margin-left: 25%;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  flex-flow: column;
+  z-index: 5;
 }
 
 input {
@@ -43,35 +76,37 @@ button:focus {
   transition: all .2s ease;
 }
 
-.register-btn {
+.disconnect-btn {
   cursor: pointer;
   background: none;
-  border: 1px solid rgba(255, 255, 255, 0.65);
+  border: 1px solid rgba(255, 200, 200, 0.75);
   border-radius: 25px;
-  color: rgba(255, 255, 255, 0.65);
-  -webkit-align-self: flex-end;
-  -ms-flex-item-align: end;
+  color: rgba(255, 200, 200, 0.75);
   align-self: flex-end;
   font-size: 19px;
   font-size: 1.2rem;
   font-weight: 300;
   line-height: 2.5em;
-  margin-top: 2em;
+  margin-top: 18em;
   margin-bottom: 25px;
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
 }
 
-.register-btn:hover {
-  background: rgba(255, 255, 255, 0.15);
-  color: #fff;
+.disconnect-btn:hover {
+  background: rgba(255, 200, 200, 0.15);
+  color: rgb(255, 100, 100);
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
 }
 
+form {
+  display: block;
+}
+
 .input-line {
   background: none;
-  width: 700px;
+  width: 85%;
   margin-bottom: 10px;
   line-height: 2.4em;
   color: #fff;
@@ -94,29 +129,10 @@ button:focus {
 }
 
 .container {
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
   justify-content: center;
   background: #eee;
   height: 100%;
-}
-
-.content {
-  padding-left: 25px;
-  padding-right: 25px;/*
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: column;
-  -ms-flex-flow: column;
-  flex-flow: column;*/
-  z-index: 5;
 }
 
 .title-db {
@@ -137,27 +153,6 @@ button:focus {
   background: rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 50px;
-}
-
-.window {
-  margin: 0 auto;
-  z-index: 100;
-  color: #fff;
-  position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: column;
-  -ms-flex-flow: column;
-  flex-flow: column;
-  box-shadow: 0px 15px 50px 10px rgba(0, 0, 0, 0.2);
-  box-sizing: border-box;
-  margin-top: 2%;
-  height: 690px;
-  width: 800px;
-  background: #fff;
-  background: url('https://pexels.imgix.net/photos/27718/pexels-photo-27718.jpg?fit=crop&w=1280&h=823') top left no-repeat;
 }
 
 .overlay {
@@ -183,48 +178,85 @@ button:focus {
   background-size:cover;
 }
 
-@media (max-width: 500px) {
-  .window {
-    width: 100%;
-    height: 100%;
-  }
-  .overlay {
-    width: 100%;
-    height: 100%;
-  }
+/* PROFILE MENU */
+.user-name {
+  display: block;
+  margin-top: 15px;
+  font-size: 28px;
+  z-index: 200;
+}
+
+.user-type {
+  display: block;
+  margin-top: 15px;
+  font-size: 24px;
+  z-index: 200;
+}
+
+.user-info {
+    display: block;
+  margin-top: 15px;
+  font-size: 17px;
+  z-index: 200;
+  margin-bottom: 10px;
+}
+
+.infos-liste {
+  font-size: 16px;
+  text-align: left;
+  display: block;
+  margin-top: 5px;
+  margin-left: 20px;
+}
+
+.infos-liste li{
+  margin-top: 10px;
 }
 
 /* info */
 
 .hey{
-  display:flex;
-  flex-wrap: wrap;
   height: 500px;
-  flex-direction: column
+}
+
+.text-response {
+  margin: 0 auto;
+  padding-bottom: 8px;
+  display:block;
+  z-index: 100;
+  width: 100%;
+  font-size: 14px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .request-response {
   display:block;
   z-index: 100;
-  height: 500px;
-  width: 475px;
-  background-color: white;
+  height: 530px;
+  width: 88%;
+  overflow: auto;
 }
 
-.text-response {
-  display:block;
-  z-index: 100;
-  height: 200px;
-  width: 275px;
-  background-color: red;
+table {
+  width: 100%;
+  border: 1px solid #FFF;
+  border-collapse: collapse;
+  font-size: 14px;
 }
 
-.graph-response {
-  display:block;
-  z-index: 100;
-  height: 300px;
-  width: 275px;
-  background-color: blue;
+th {
+  border: 2px solid #FFF;
+  font-weight: 500;
+  font-size: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+tbody td {
+  border: 1px solid #FFF;
+  padding-left: 2px;
 }
 
 /* NAV BAR */
@@ -249,8 +281,41 @@ button:focus {
   -webkit-transition: all .15s ease-in-out;
   transition: all .15s ease-in-out;
   color: #fff;
+  text-decoration: none; 
 }
 .nav-btn:hover {
   box-shadow: 0 0 5px 0 #fff inset, 0 0 5px 2px #fff;
   border: 2px solid #fff;
+}
+
+/* SCROLL BAR STYLE */
+.request-response::-webkit-scrollbar {
+  width: 0.4em;
+  height: 0.4em;
+}
+ 
+.request-response::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+.request-response::-webkit-scrollbar-thumb {
+  background-color: #eee;
+  outline: 1px solid slategrey;
+}
+
+/* send button*/
+.btn-send {
+  position: absolute;
+  margin-top: 20px;
+  margin-left: 10px;
+  width: 30px;
+  height: 30px;
+  border-radius: 30%;
+}
+
+.btn-send:hover {
+  background: rgba(200, 200, 200, 0.1);
+  width: 28px;
+  height: 28px;
+  margin-top: 21px;
 }
