--- a/css/css_main.css
+++ b/css/css_main.css
@@ -107,8 +107,9 @@ form {
 .input-line {
   background: none;
   width: 85%;
+  margin-top: 10px;
   margin-bottom: 10px;
-  line-height: 2.4em;
+  line-height: 1.8em;
   color: #fff;
   font-weight: 300;
   letter-spacing: 0px;
