--- a/css/css_main.css
+++ b/css/css_main.css
@@ -75,6 +75,9 @@ button:focus {
 }
 
 .disconnect-btn {
+  display: block;
+  margin: 0 auto;
+  width: 60%;
   cursor: pointer;
   background: none;
   border: 1px solid rgba(255, 200, 200, 0.75);
@@ -85,8 +88,9 @@ button:focus {
   font-size: 1.2rem;
   font-weight: 300;
   line-height: 2.5em;
-  margin-top: 18em;
+  margin-top: 17em;
   margin-bottom: 25px;
+  text-decoration: none; 
 }
 
 .disconnect-btn:hover {
@@ -227,8 +231,8 @@ form {
 .request-response {
   display:block;
   z-index: 100;
-  height: 530px;
-  width: 88%;
+  height: 542px;
+  width: 93%;
   overflow: auto;
 }
 
