--- a/css/css_main.css
+++ b/css/css_main.css
@@ -26,7 +26,7 @@ html {
   box-shadow: 0px 15px 50px 10px rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
   height: 690px;
-  width: 800px;
+  width: 80vw;
   background: #fff;
   background: url('https://pexels.imgix.net/photos/27718/pexels-photo-27718.jpg?fit=crop&w=1280&h=823') top left no-repeat;
 }
