--- a/css/css_main.css
+++ b/css/css_main.css
@@ -26,14 +26,14 @@ html {
   box-shadow: 0px 15px 50px 10px rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
   height: 690px;
-  width: 80vw;
+  width: 65vw;
   background: #fff;
   background: url('https://pexels.imgix.net/photos/27718/pexels-photo-27718.jpg?fit=crop&w=1280&h=823') top left no-repeat;
 }
 
 .profile {
   height: 100%;
-  width: 25%;
+  width: 275px;
   background-color: rgba(0, 184, 212, .15);
   border-right: 1px solid #fff;
   text-align: center;
@@ -44,8 +44,15 @@ html {
 .content {
   position: absolute;
   height: 100%;
-  width: 75%;
-  margin-left: 25%;
+  /* Firefox */
+  width: -moz-calc(100% - 275px);
+  /* WebKit */
+  width: -webkit-calc(100% - 275px);
+  /* Opera */
+  width: -o-calc(100% - 275px);
+  /* Standard */
+  width: calc(100% - 275px);
+  margin-left: 275px;
   padding-left: 20px;
   padding-right: 20px;
   display: flex;
