--- a/css/graph.css
+++ b/css/graph.css
@@ -7,10 +7,10 @@
 }
 
 .graph-response {
-  margin-left: 1%;
+  overflow: auto;
+  margin-top: 20px;
   display:block;
   z-index: 100;
   height: 60%;
-  width: 90%;
-  background-color: blue;
+  width: 88%;
 }
