--- a/css/css_main.css
+++ b/css/css_main.css
@@ -142,11 +142,17 @@ form {
 .title-db {
   font-weight: 200;
   margin-top: 10px;
+  margin-bottom: 2px;
   text-align: center;
   font-size: 40px;
-  font-size: 2.5rem;
+  font-size: 1.75rem;
   letter-spacing: 0px;
   letter-spacing: 0.05rem;
+}
+
+.phrase {
+  font-size: 1rem;
+  letter-spacing: 0px;
 }
 
 .error-txt {
